# JSieve

./: .gitignore  LICENSE  README.md  install.sh  main.py  pyproject.toml  requirements.txt
analyzer/: endpoint_extractor.py  entropy_engine.py  secret_regex_engine.py  sensitive_analyzer.py
collector/: js_downloader.py  sourcemap_checker.py
recon/: crawler.py  get_LiveHosts.py
reporting/: json_to_html.py
